Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-5754

[C++]Missing override for ~GrpcStreamWriter?

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 0.14.0
    • C++

    Description

      I encountered the following compile error:

      ../src/arrow/flight/client.cc:244:3: error: '~GrpcStreamWriter' overrides a destructor but is not marked 'override' [-Werror,-Winconsistent-missing-destructor-override]
        ~GrpcStreamWriter() = default;
        ^
      ../src/arrow/flight/client.h:86:27: note: overridden virtual function is here
      class ARROW_FLIGHT_EXPORT FlightStreamWriter : public ipc::RecordBatchWriter {
                                ^
      

      Putting override modifier can resolve this problem.
      I'll make a pull-request for the change.

      Attachments

        Issue Links

          Activity

            People

              mrkn Kenta Murata
              mrkn Kenta Murata
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h
                  1h

                  Slack

                    Issue deployment